# infer-engine

./: CMakeLists.txt  README.md  dockerfile
include/data/: tensor.h
src/data/: tensor.cc
tests/: CMakeLists.txt  tensor_test.py  test.cc  test_tensor.cc
